# aws-discovery

./: README.md  pyproject.toml
dev/: main.py
src/: loader.py  main.py  nodes.py
